lab_3/MathLangParser.py
# Generated from MathLangParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MathLangParser ( Parser ):

    grammarFileName = "MathLangParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", 
                     "'='", "'('", "')'", "'{'", "'}'", "':'", "','", "';'", 
                     "'func'", "'return'", "'>'", "'<'", "'=='", "'!='", 
                     "'>='", "'<='", "'if'", "'else'", "'switch'", "'case'", 
                     "'default'", "'for'", "'while'" ]

    symbolicNames = [ "<INVALID>", "PLUS", "MINUS", "MULT", "DIV", "MOD", 
                      "POW", "ASSIGN", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "COLON", "COMMA", "SEMI", "FUNC", "RETURN", "GT", 
                      "LT", "EQ", "NEQ", "GTE", "LTE", "IF", "ELSE", "SWITCH", 
                      "CASE", "DEFAULT", "FOR", "WHILE", "ID", "INT_LITERAL", 
                      "FLOAT_LITERAL", "WS", "NEWLINE" ]

    RULE_program = 0
    RULE_function_definition = 1
    RULE_parameters = 2
    RULE_block = 3
    RULE_expr = 4
    RULE_if_statement = 5
    RULE_switch_statement = 6
    RULE_case_block = 7
    RULE_update = 8
    RULE_for_statement = 9
    RULE_while_statement = 10
    RULE_function_call = 11
    RULE_argument_list = 12
    RULE_assignment = 13
    RULE_return_statement = 14
    RULE_statement = 15

    ruleNames =  [ "program", "function_definition", "parameters", "block", 
                   "expr", "if_statement", "switch_statement", "case_block", 
                   "update", "for_statement", "while_statement", "function_call", 
                   "argument_list", "assignment", "return_statement", "statement" ]

    EOF = Token.EOF
    PLUS=1
    MINUS=2
    MULT=3
    DIV=4
    MOD=5
    POW=6
    ASSIGN=7
    LPAREN=8
    RPAREN=9
    LBRACE=10
    RBRACE=11
    COLON=12
    COMMA=13
    SEMI=14
    FUNC=15
    RETURN=16
    GT=17
    LT=18
    EQ=19
    NEQ=20
    GTE=21
    LTE=22
    IF=23
    ELSE=24
    SWITCH=25
    CASE=26
    DEFAULT=27
    FOR=28
    WHILE=29
    ID=30
    INT_LITERAL=31
    FLOAT_LITERAL=32
    WS=33
    NEWLINE=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MathLangParser.Function_definitionContext)
            else:
                return self.getTypedRuleContext(MathLangParser.Function_definitionContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MathLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(MathLangParser.StatementContext,i)


        def getRuleIndex(self):
            return MathLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = MathLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 34
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [15]:
                    self.state = 32
                    self.function_definition()
                    pass
                elif token in [8, 16, 23, 25, 28, 29, 30, 31, 32]:
                    self.state = 33
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 36 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8363540736) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(MathLangParser.FUNC, 0)

        def ID(self):
            return self.getToken(MathLangParser.ID, 0)

        def LPAREN(self):
            return self.getToken(MathLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MathLangParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(MathLangParser.LBRACE, 0)

        def block(self):
            return self.getTypedRuleContext(MathLangParser.BlockContext,0)


        def RBRACE(self):
            return self.getToken(MathLangParser.RBRACE, 0)

        def parameters(self):
            return self.getTypedRuleContext(MathLangParser.ParametersContext,0)


        def getRuleIndex(self):
            return MathLangParser.RULE_function_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_definition" ):
                listener.enterFunction_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_definition" ):
                listener.exitFunction_definition(self)




    def function_definition(self):

        localctx = MathLangParser.Function_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(MathLangParser.FUNC)
            self.state = 39
            self.match(MathLangParser.ID)
            self.state = 40
            self.match(MathLangParser.LPAREN)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 41
                self.parameters()


            self.state = 44
            self.match(MathLangParser.RPAREN)
            self.state = 45
            self.match(MathLangParser.LBRACE)
            self.state = 46
            self.block()
            self.state = 47
            self.match(MathLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MathLangParser.RULE_parameters

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ParameterListContext(ParametersContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ParametersContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MathLangParser.ID)
            else:
                return self.getToken(MathLangParser.ID, i)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MathLangParser.COMMA)
            else:
                return self.getToken(MathLangParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)



    def parameters(self):

        localctx = MathLangParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            localctx = MathLangParser.ParameterListContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(MathLangParser.ID)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 50
                self.match(MathLangParser.COMMA)
                self.state = 51
                self.match(MathLangParser.ID)
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MathLangParser.RULE_block

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BlockStatementContext(BlockContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.BlockContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MathLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(MathLangParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStatement" ):
                listener.enterBlockStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStatement" ):
                listener.exitBlockStatement(self)



    def block(self):

        localctx = MathLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block)
        self._la = 0 # Token type
        try:
            localctx = MathLangParser.BlockStatementContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8363507968) != 0):
                self.state = 57
                self.statement()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MathLangParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class MultiplyExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MathLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MathLangParser.ExprContext,i)

        def MULT(self):
            return self.getToken(MathLangParser.MULT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplyExpr" ):
                listener.enterMultiplyExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplyExpr" ):
                listener.exitMultiplyExpr(self)


    class FloatLiteralContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT_LITERAL(self):
            return self.getToken(MathLangParser.FLOAT_LITERAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloatLiteral" ):
                listener.enterFloatLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloatLiteral" ):
                listener.exitFloatLiteral(self)


    class PowExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MathLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MathLangParser.ExprContext,i)

        def POW(self):
            return self.getToken(MathLangParser.POW, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPowExpr" ):
                listener.enterPowExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPowExpr" ):
                listener.exitPowExpr(self)


    class AddExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MathLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MathLangParser.ExprContext,i)

        def PLUS(self):
            return self.getToken(MathLangParser.PLUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddExpr" ):
                listener.enterAddExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddExpr" ):
                listener.exitAddExpr(self)


    class GTExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MathLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MathLangParser.ExprContext,i)

        def GT(self):
            return self.getToken(MathLangParser.GT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGTExpr" ):
                listener.enterGTExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGTExpr" ):
                listener.exitGTExpr(self)


    class WhileStatementContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def while_statement(self):
            return self.getTypedRuleContext(MathLangParser.While_statementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)


    class LTExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MathLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MathLangParser.ExprContext,i)

        def LT(self):
            return self.getToken(MathLangParser.LT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLTExpr" ):
                listener.enterLTExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLTExpr" ):
                listener.exitLTExpr(self)


    class LTEExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MathLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MathLangParser.ExprContext,i)

        def LTE(self):
            return self.getToken(MathLangParser.LTE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLTEExpr" ):
                listener.enterLTEExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLTEExpr" ):
                listener.exitLTEExpr(self)


    class DivideExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MathLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MathLangParser.ExprContext,i)

        def DIV(self):
            return self.getToken(MathLangParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDivideExpr" ):
                listener.enterDivideExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDivideExpr" ):
                listener.exitDivideExpr(self)


    class IfStatementContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def if_statement(self):
            return self.getTypedRuleContext(MathLangParser.If_statementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)


    class SwitchStatementContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def switch_statement(self):
            return self.getTypedRuleContext(MathLangParser.Switch_statementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwitchStatement" ):
                listener.enterSwitchStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwitchStatement" ):
                listener.exitSwitchStatement(self)


    class GTEExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MathLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MathLangParser.ExprContext,i)

        def GTE(self):
            return self.getToken(MathLangParser.GTE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGTEExpr" ):
                listener.enterGTEExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGTEExpr" ):
                listener.exitGTEExpr(self)


    class FunctionCallExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def function_call(self):
            return self.getTypedRuleContext(MathLangParser.Function_callContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCallExpr" ):
                listener.enterFunctionCallExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCallExpr" ):
                listener.exitFunctionCallExpr(self)


    class EQExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MathLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MathLangParser.ExprContext,i)

        def EQ(self):
            return self.getToken(MathLangParser.EQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEQExpr" ):
                listener.enterEQExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEQExpr" ):
                listener.exitEQExpr(self)


    class NEQExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MathLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MathLangParser.ExprContext,i)

        def NEQ(self):
            return self.getToken(MathLangParser.NEQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNEQExpr" ):
                listener.enterNEQExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNEQExpr" ):
                listener.exitNEQExpr(self)


    class VarExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MathLangParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarExpr" ):
                listener.enterVarExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarExpr" ):
                listener.exitVarExpr(self)


    class IntLiteralContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT_LITERAL(self):
            return self.getToken(MathLangParser.INT_LITERAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntLiteral" ):
                listener.enterIntLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntLiteral" ):
                listener.exitIntLiteral(self)


    class SubtractExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MathLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MathLangParser.ExprContext,i)

        def MINUS(self):
            return self.getToken(MathLangParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubtractExpr" ):
                listener.enterSubtractExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubtractExpr" ):
                listener.exitSubtractExpr(self)


    class ModExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MathLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MathLangParser.ExprContext,i)

        def MOD(self):
            return self.getToken(MathLangParser.MOD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModExpr" ):
                listener.enterModExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModExpr" ):
                listener.exitModExpr(self)


    class ParenExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(MathLangParser.LPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(MathLangParser.ExprContext,0)

        def RPAREN(self):
            return self.getToken(MathLangParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenExpr" ):
                listener.enterParenExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenExpr" ):
                listener.exitParenExpr(self)


    class ForStatementContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MathLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def for_statement(self):
            return self.getTypedRuleContext(MathLangParser.For_statementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MathLangParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = MathLangParser.ParenExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 64
                self.match(MathLangParser.LPAREN)
                self.state = 65
                self.expr(0)
                self.state = 66
                self.match(MathLangParser.RPAREN)
                pass

            elif la_ == 2:
                localctx = MathLangParser.FunctionCallExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 68
                self.function_call()
                pass

            elif la_ == 3:
                localctx = MathLangParser.IfStatementContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 69
                self.if_statement()
                pass

            elif la_ == 4:
                localctx = MathLangParser.SwitchStatementContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 70
                self.switch_statement()
                pass

            elif la_ == 5:
                localctx = MathLangParser.ForStatementContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 71
                self.for_statement()
                pass

            elif la_ == 6:
                localctx = MathLangParser.WhileStatementContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 72
                self.while_statement()
                pass

            elif la_ == 7:
                localctx = MathLangParser.IntLiteralContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 73
                self.match(MathLangParser.INT_LITERAL)
                pass

            elif la_ == 8:
                localctx = MathLangParser.FloatLiteralContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 74
                self.match(MathLangParser.FLOAT_LITERAL)
                pass

            elif la_ == 9:
                localctx = MathLangParser.VarExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 75
                self.match(MathLangParser.ID)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 116
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 114
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = MathLangParser.AddExprContext(self, MathLangParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 78
                        if not self.precpred(self._ctx, 21):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 21)")
                        self.state = 79
                        self.match(MathLangParser.PLUS)
                        self.state = 80
                        self.expr(22)
                        pass

                    elif la_ == 2:
                        localctx = MathLangParser.SubtractExprContext(self, MathLangParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 81
                        if not self.precpred(self._ctx, 20):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 20)")
                        self.state = 82
                        self.match(MathLangParser.MINUS)
                        self.state = 83
                        self.expr(21)
                        pass

                    elif la_ == 3:
                        localctx = MathLangParser.MultiplyExprContext(self, MathLangParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 84
                        if not self.precpred(self._ctx, 19):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 19)")
                        self.state = 85
                        self.match(MathLangParser.MULT)
                        self.state = 86
                        self.expr(20)
                        pass

                    elif la_ == 4:
                        localctx = MathLangParser.DivideExprContext(self, MathLangParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 87
                        if not self.precpred(self._ctx, 18):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 18)")
                        self.state = 88
                        self.match(MathLangParser.DIV)
                        self.state = 89
                        self.expr(19)
                        pass

                    elif la_ == 5:
                        localctx = MathLangParser.ModExprContext(self, MathLangParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 90
                        if not self.precpred(self._ctx, 17):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 17)")
                        self.state = 91
                        self.match(MathLangParser.MOD)
                        self.state = 92
                        self.expr(18)
                        pass

                    elif la_ == 6:
                        localctx = MathLangParser.PowExprContext(self, MathLangParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 93
                        if not self.precpred(self._ctx, 16):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 16)")
                        self.state = 94
                        self.match(MathLangParser.POW)
                        self.state = 95
                        self.expr(17)
                        pass
